# Bonsai

./: CMakeLists.txt  CONTRIBUTING.md  Main.qml  NOTES.txt  README.md  README.odt  deploy.sh
Bonsai/Backend/: AudioBackend.cpp  AudioBackend.hpp  BFrontendManager.cpp  BFrontendManager.hpp  BMaskedItem.hpp  BProxyWindow.cpp  BProxyWindow.hpp  BSessionManager.cpp  BSessionManager.hpp  BTaskbarBaseModel.cpp  BTaskbarBaseModel.hpp  BTaskbarModel.cpp  BTaskbarModel.hpp  BWindowManagerX11.cpp  Backend.cpp  Backend.hpp  BackendAppsIconsProvider.hpp  CMakeLists.txt  MaskedItem.cpp  MaskedItem.hpp  Model.cpp  Model.hpp  RemoteWindow.cpp  RemoteWindow.hpp  TaskbarIconProvider.cpp  ThemesModel.hpp  WMBackend.cpp  WMBackend.hpp  WindowManagerDBus.cpp  WindowManagerDBus.hpp
Bonsai/Backend/helper/: Process.cpp  Process.hpp
Bonsai/Backend/private/: Mask.cpp  Mask.hpp  MaskAlgorithm.cpp  MaskAlgorithm.hpp  MaskTracker.cpp  MaskTracker.hpp  ProxyWindowController.cpp  ProxyWindowServer.cpp  ProxyWindowServer.hpp
Bonsai/Backend/server/: FrontendManagerAPIService.cpp  FrontendManagerService.cpp  FrontendManagerService.hpp  GuiManager.cpp  GuiManager.hpp  QmlGui.cpp  QmlGui.hpp  Server.cpp  Server.hpp  SessionService.cpp  SessionService.hpp  X11WindowManagerService.cpp  X11WindowManagerService.hpp
Bonsai/Backend/strut/: Strut.hpp  StrutManager.cpp  StrutManager.hpp
Bonsai/BackendLib/: AppsListModel.cpp  AppsListModel.hpp  AudioBackend.cpp  AudioBackend.hpp  BFavoritesAppsModel.cpp  BFavoritesAppsModel.hpp  BFrontendManager.cpp  BFrontendManager.hpp  BFrontendModel.cpp  BFrontendModel.hpp  BProxyWindow.cpp  BProxyWindow.hpp  BSessionManager.cpp  BTaskbarBaseModel.cpp  BTaskbarModel.hpp  BWindowManagerX11.cpp  Backend.cpp  Backend.hpp  BackendAppsIconsProvider.hpp  CMakeLists.txt  FavoriteAppsListModel.hpp  WindowManagerDBus.cpp
Bonsai/BackendLib/audio/: MPreferredDevice.cpp  MPreferredDevice.hpp
Bonsai/BackendLib/private/: ProxyWindowController.cpp  ProxyWindowController.hpp  ProxyWindowServer.cpp
Bonsai/BackendLib/scxml/: GuiManagerStateMachine.scxml
Bonsai/BackendLib/server/: FavoriteAppsService.cpp  FavoriteAppsService.hpp  FrontendManagerAPIService.cpp  FrontendManagerAPIService.hpp  FrontendManagerService.cpp  FrontendManagerService.hpp  GuiManager.cpp  GuiManager.hpp  QmlGui.cpp  QmlGui.hpp  Server.cpp  Server.hpp  SessionService.cpp  X11WindowManagerService.cpp  X11WindowManagerService.hpp
Bonsai/BonsaiApp/: main.cpp  (+4 more)
Bonsai/GnomeMod/: CMakeLists.txt  ControlBoard.qml  Main.qml  SidePanelContent.qml  UIStyle.qml  qmldir
Bonsai/GnomeMod/common_qml/: ActionButton.qml
Bonsai/GnomeMod/contents/: AppLauncherContent.qml  ControlBoardContent.qml  TopPanelContent.qml
Bonsai/GnomeMod/popups/: ControlBoardPopup.qml
Bonsai/GnomeMod/style/: GMenu.qml  GMenuItem.qml  GMenuSeparator.qml  UIStyle.qml
Bonsai/GnomeMod/windows/: AppsLauncherWindow.qml
Bonsai/Wallpaper/: AppMenuContent.qml  CMakeLists.txt  Main.qml  SystemVolumeSlider.qml  TurnOffWindow.qml
Bonsai/Wallpaper/common_components/: XPMenu.qml
BonsaiWallpaper/: CMakeLists.txt  bonsai-desktop.desktop  logger.cpp  logger.hpp  main.cpp  main_server.cpp
BonsaiWallpaper/BonsaiWallpaper/: CMakeLists.txt  Main.qml  TiledImageVertical.qml
BonsaiWallpaper/BonsaiWallpaper/common_components/: XPMenuItem.qml
BonsaiWallpaper/XPFrontend/: AppMenuContent.qml  AppMenuWindow.qml  CMakeLists.txt  Clock3D.qml  LogOffWindow.qml  LogoutContent.qml  Main.qml  MainWindows.qml  SystemVolumeSlider.qml  TaskbarButton.qml  TaskbarContent.qml  TurnOffContent.qml  TurnOffWindow.qml  WallpaperContent.qml
BonsaiWallpaper/XPFrontend/common_components/: XPMenu.qml
BonsaiWallpaper/XPFrontend/contents/: AppMenuContent.qml
BonsaiWallpaper/XPFrontend/mask/: MainMask.qml  WindowOverlay.qml
BonsaiWallpaper/XPFrontend/windows/: Clock3DWindow.qml  SystemVolumeWindow.qml
Experimental/gtk_simple_app/: CMakeLists.txt  main.c
Maia/BackendLib/: AppsListModel.cpp  AppsListModel.hpp  AudioBackend.cpp  BFavoritesAppsModel.cpp  BFrontendModel.cpp  BMaskedItem.cpp  BProxyWindow.cpp  BProxyWindow.hpp  BSessionManager.cpp  BWindowManagerX11.cpp  BWindowManagerX11.hpp  Backend.cpp  Backend.hpp  BackendAppsIconsProvider.hpp  CMakeLists.txt  MAudioBackend.cpp  MAudioBackend.hpp  MFavoritesAppsModel.cpp  MFavoritesAppsModel.hpp  MFrontendModel.cpp  MFrontendModel.hpp  MMaskedItem.cpp  MMaskedItem.hpp  MProxyWindow.cpp  MProxyWindow.hpp  MSessionManager.cpp  MSessionManager.hpp  MTaskbarBaseModel.cpp  MTaskbarBaseModel.hpp  MTaskbarModel.cpp  MTaskbarModel.hpp  MWindowManagerX11.cpp  MWindowManagerX11.hpp  TaskbarIconProvider.cpp  ThemesModel.cpp
Maia/BackendLib/audio/: MPreferredDevice.cpp
Maia/BackendLib/private/: Mask.cpp  MaskTracker.cpp  MaskTracker.hpp  ProxyWindowServer.cpp
Maia/BackendLib/server/: Application.cpp  Application.hpp  FavoriteAppsListModel.hpp  FavoriteAppsService.cpp  FavoriteAppsService.hpp  FrontendInfo.hpp  FrontendManagerService.cpp  FrontendManagerService.hpp  GuiManager.cpp  GuiManager.hpp  QmlGui.cpp  QmlGui.hpp  Server.cpp  Server.hpp  SessionService.cpp  SessionService.hpp  X11WindowManagerService.cpp  X11WindowManagerService.hpp
Maia/BackendLib/strut/: StrutManager.cpp
Maia/DeployFiles/: CMakeLists.txt  install_on_ubuntu.sh  run.sh  run_logger.sh  run_maia_in_xephyr.sh
Maia/GnomeMod/: CMakeLists.txt  Main.qml  SidePanel.qml  SidePanelContent.qml  qmldir
Maia/GnomeMod/common_qml/: ActionButton.qml
Maia/GnomeMod/contents/: AppLauncherContent.qml  ControlBoardContent.qml  TopPanelContent.qml
Maia/GnomeMod/style/: GMenuItem.qml  GMenuSeparator.qml  GTextField.qml  UIStyle.qml
Maia/GnomeMod/windows/: AppsLauncherWindow.qml  ControlBoardWindow.qml
Maia/LoggerApp/: CMakeLists.txt  LoggerBackend.cpp  LoggerBackend.hpp  Server.cpp  Server.hpp  main.cpp
Maia/MaiaServerApp/: CMakeLists.txt  logger.cpp  logger.hpp  maia-desktop.desktop  maia_0.1.0-desktop.desktop  maia_version.h  main.cpp
Maia/MaiaServerApp/XPFrontend/: LogoutContent.qml  MainWindows.qml  TaskbarContent.qml  TurnOffContent.qml  WallpaperContent.qml
(+53 files in other folders)
